Added readme text, CSS, HTML

--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
     </head>
     <body>
         <main>
+            <input type="button" id="retry" value="Play Again">
             <div class="container">
                 <h2>Cool Guessing Game</h2>
                 <section>
-                    
+                    <p class="guess-count"></p>
+                    <p class="numb"></p>
+                    <input type="text" id="guess-inp">
                 </section>
             </div>
         </main>
