--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
             <input type="button" id="retry" value="Play Again">
             <div class="container">
                 <h2>Cool Guessing Game</h2>
+                <p class="description">
+                    Guess a number between 1 and 50, and press the button
+                </p>
                 <section>
-                    <p class="guess-count"></p>
+                    <p class="guess-count">Guesses: 0</p>
                     <p class="numb"></p>
-                    <input type="text" id="guess-inp">
+                    <input type="text" id="guess-inp"onclick="this.select()">
                 </section>
             </div>
         </main>
